--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "dependencies": {
     "@boxyhq/metrics": "0.2.6",
     "@boxyhq/react-ui": "3.3.42",
-    "@boxyhq/saml-jackson": "1.23.2",
+    "@boxyhq/saml-jackson": "^1.23.5",
     "@heroicons/react": "2.1.3",
     "@next-auth/prisma-adapter": "1.0.7",
     "@prisma/client": "5.12.1",
@@ -38,6 +38,7 @@
     "@retracedhq/retraced": "0.7.8",
     "@sentry/nextjs": "7.110.1",
     "@tailwindcss/typography": "0.5.12",
+    "apexcharts": "^3.49.0",
     "bcryptjs": "2.4.3",
     "classnames": "2.5.1",
     "cookies-next": "4.1.1",
@@ -51,6 +52,7 @@
     "next-i18next": "13.3.0",
     "nodemailer": "6.9.13",
     "react": "18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-daisyui": "5.0.0",
     "react-dom": "18.2.0",
     "react-email": "2.1.1",
@@ -63,7 +65,8 @@
     "svix": "1.21.0",
     "swr": "2.2.5",
     "yup": "1.4.0",
-    "zod": "3.22.4"
+    "zod": "3.22.4",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@faker-js/faker": "8.4.1",
